# agents

./: .gitattributes  .gitignore  LICENSE  README.md  config.toml  is-this-the-mirror.sh  mirror-checkup.sh  pyproject.toml
.githooks/: pre-commit  pre-push  secret_guard.py
cagent/: .env.example  __init__.py  atomicio.py  cli.py  clock.py  commands.py  config.py  control.py  daymarker.py  deferred.py  dispatcher.py  gitpush.py  gmail.py  goals.py  guardrails.py  locking.py  logging_setup.py  memory.py  persona.py  reflect.py  supervise.py  tick.py  tick_pipeline.py  usage_report.py  watchdog.py
control/: README.md
docs/: ARCHITECTURE.md  PERSONAS.md  SETUP.md
launchd/: com.$USER.cagent.dailypush.plist  com.$USER.cagent.dispatcher.plist  com.$USER.cagent.heartbeat.plist  com.$USER.cagent.usage.plist  com.$USER.cagent.usagemail.plist  com.$USER.cagent.watchdog.plist
persona/: constitution.md  researcher.md  signature.txt
prompts/: gate-check.md
tests/: _helpers.py  conftest.py  test_approvals.py  test_approved_send_retry.py  test_atomicio.py  test_backoff_gate.py  test_best_effort.py  test_branch_guard.py  test_cap_exemption.py  test_cli_commands.py  test_cli_mail.py  test_cli_persona.py  test_cli_sent.py  test_code_improve_fixes.py  test_command_table.py  test_config_axes.py  test_context.py  test_context_render.py  test_control.py  test_daymarker.py  test_deferred.py  test_dispatcher.py  test_draft_status.py  test_email_commands.py  test_execute_handlers.py  test_execute_unwrap.py  test_gate_check.py  test_gate_fail_closed.py  test_gitpush.py  test_goals.py  (+23 more)
(+28 files in other folders)
